--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -13,8 +13,8 @@
 }
 
 .avatar-match-list {
-  width: 60px;
-  height: 60px;
+  width: 75px;
+  height: 75px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border-radius: 50%;
 }
@@ -23,11 +23,12 @@
   width: 50px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: 3px solid $hivie-pink;
+  border: 4px solid $hivie-pink;
   .inline-block {
     display: inline-block; }
   .center {
-    text-align: center; }
+    text-align: center;
+    text-decoration: none; }
   // avatar pink, need to set status to match
 }
 
