--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,8 +7,8 @@
         <h3>Keep your profile up to date and start swiping !</h3>
       </div>
 
-      <% if user_signed_in? && @user.present? %>
-        <%= link_to "Let's swipe!", user_path(@user), class: "btn button btn-pink mt-5"  %>
+      <% if user_signed_in? && @next_user.present? %>
+        <%= link_to "Let's swipe!", user_path(@next_user), class: "btn button btn-pink mt-5"  %>
       <% end %>
     </div>
   </div>
