--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,12 +37,7 @@
       <% unless @next_user %>
         <div>
           <%= link_to root_path do %>
-            <i class="fas fa-times mx-5"></i>
-          <% end %>
-        </div>
-        <div>
-          <%= link_to root_path do %>
-            <i class="fas fa-heart mx-5"></i>
+            This is your last potential match : (
           <% end %>
         </div>
       <% else %>
@@ -51,11 +46,12 @@
             <i class="fas fa-times mx-5"></i>
           <% end %>
         </div>
+      <% end %>
+
         <div>
           <%= link_to user_matches_path(current_user, {matching_user_id: @user.id}), method: :post do %>
             <i class="fas fa-heart mx-5"></i>
           <% end %>
-          </div>
-        <% end %>
+        </div>
       </div>
 
