VIEW: Move Logo on Sign-In Page. Adjust Font Color of sub-message

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -87,6 +87,7 @@ h4 {
 // Match List: Message Preview
 h5 {
   font-size: 16px !important;
+  color: $hivie-purple;
 }
 
 // Match List: Matches Alias
