VIEW: Capatalize Header

--- a/app/views/user_characteristics/new.html.erb
+++ b/app/views/user_characteristics/new.html.erb
@@ -1,5 +1,5 @@
 <!-- H1 title -->
-  <h3 class="black-profile-header mt-3 mb-3" style="text-align: center">Your profile</h3>
+  <h3 class="black-profile-header mt-3 mb-3" style="text-align: center">Your Profile</h3>
 <!-- Accordion cards -->
 <div class="accordion" id="accordionExample">
   <% UserCharacteristic::CATEGORIES.each_with_index do |category, index| %>
