VIEW: Adding Blurred Avatar to Match Page. Changing 'x' button to circle

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -19,20 +19,19 @@
   background-color: transparent;
 }
 
-// X for the Swipe
+// X for the Swipe & Match Show page
 .btn-rounded {
   height: 45px;
   width: 45px;
   border-radius: 50%;
+  color: $hivie-purple;
 }
 
 .btn {
   font-size: 20px;
   font-weight: 500;
-
 }
 
 #btn-home {
   width: 80% !important;
-
 }
