--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,6 +3,7 @@
 .background{
   background: linear-gradient(180deg, #6455B3 0%, #D45F84 100%);
   position: relative;
+  overflow: hidden;
 }
 
 #home-logo{
@@ -14,6 +15,5 @@
   bottom: 10px;
   left: 50%;
   -webkit-transform: translateX(-50%);
-transform: translateX(-50%)
-
+  transform: translateX(-50%)
 }
