Avatar photo uploader bundle of joy

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,6 +3,7 @@
 .background{
   background: linear-gradient(180deg, #6455B3 0%, #D45F84 100%);
   position: relative;
+  overflow:hidden;
 }
 
 #home-logo{
