--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,10 +10,12 @@
       <div class="form-inputs">
         <div class="photo-upload text-center">
           <i class="fas fa-user-circle fa-5x" style="color: $hivie-purple"></i>
-          <%= f.input :photo, label: "Profile Picture"%>
+          <%#= f.input :photo, label: "Profile Picture"%>
           <%= f.input :photo_cache, as: :hidden %>
+          <%= f.input :photo, input_html: { class: 'd-none' }, label_html: { class: 'upload-photo'}, label: '📷 Upload a photo' %>
           <p style="opacity: 0.6">*Don’t worry, we’ll keep your photo anoymous for now</p>
         </div>
+
         <div class="row">
           <div class="col">
             <%= f.input :first_name, required: true, autofocus: true, input_html: { autocomplete: "first_name" }%>
