--- a/app/views/layouts/message_layout.html.erb
+++ b/app/views/layouts/message_layout.html.erb
@@ -25,6 +25,8 @@
 
       <%= javascript_include_tag 'application' %>
       <%= javascript_pack_tag 'application' %>
+    <%= yield :after_js %>
+
     </body>
   </html>
 
