--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,16 +5,48 @@
       <p><%= date %></p>
     </div>
     <% messages.each do |message| %>
-      <%= render 'message', message: message %>
+      <%= render 'message', message: message, user_is_messages_author: message.user == current_user %>
       <% end %>
   <% end %>
 </div>
 
-
 <div class="input_msg text-center fixed-bottom" style="padding-top: 16px;">
   <%= render 'form', message: @message, match: @match %>
 </div>
+<% content_for :after_js do %>
+  <script>
+    App['match_<%= @match.id %>'] = App.cable.subscriptions.create({ channel: 'MatchesChannel', match_id: <%= @match.id %> }, {
+          received: (data) => {
+            if (data.current_user_id !== <%= current_user.id %>) {
+              const chat = document.getElementById('messages');
+              chat.insertAdjacentHTML('beforeend', data.message_partial);
+              const messages = document.querySelectorAll('.message');
+              const lastMessage = messages[messages.length - 1];
+              lastMessage.scrollIntoView();
+            }
+          }
+      })
+  </script>
+<% end %>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- REMONTER LE CODE -->
 
 <!-- MODAL POP-UP -->
 <div class="modal fade" id="ModalRequest" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
