--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -40,7 +40,7 @@
     </div>
 
     <div class="form-actions">
-      <h5><%=  f.button :submit, "Update Account", class: 'btn btn-transparent'%><h5>
+      <h5><%=  f.button :submit, "Update Account", class: 'button btn-pink'%><h5>
     </div>
     <% end %>
 
