--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -2,8 +2,8 @@
   <h3 class="text-center mb-5 mt-5">It's A Match!</h3>
 
   <div class="d-flex justify-content-center">
-     <div class="avatar-form" style="background-image: url(<%= cloudinary_url(@match.user_one.photo, crop: :fill, :transformation => {:effect => "blur:800"}) %>)"></div>
-      <div class="avatar-form" style="background-image: url(<%= cloudinary_url(@match.user_two.photo, crop: :fill, :transformation => {:effect => "blur:800"}) %>)"></div>
+     <div class="avatar-form" style="background-size: cover; background-image: url('<%= cloudinary_url(@match.user_one.photo, crop: :fill, :transformation => {:effect => "blur:800", gravity: :face}) %>')"></div>
+      <div class="avatar-form" style="background-size: cover; background-image: url('<%= cloudinary_url(@match.user_two.photo, crop: :fill, :transformation => {:effect => "blur:800", gravity: :face}) %>')"></div>
       <%#= cl_image_tag @match.user_one.photo, crop: :fill, class: "avatar-x-large mr-5" %>
       <%#= cl_image_tag @match.user_two.photo, crop: :fill, class: "avatar-x-large" %>
   </div>
