--- a/app/views/shared/_chat_navbar.html.erb
+++ b/app/views/shared/_chat_navbar.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class="text-center">
-    <%# if @match.reveal_status == 'revealed' %>
+    <%# if @match.revealed? %>
       <!-- Show me your face -->
     <%# else %>
       <!-- Dont -->
