--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,5 +1,6 @@
 <div class="background">
-  <h3 class="text-center mb-5 mt-5">It's A Match!</h3>
+  <div class="main-container-match"></div>
+  <h2 class="text-center mb-5 mt-5">It's A Match!</h2>
 
   <div class="d-flex justify-content-center">
      <div class="avatar-form" style="background-size: cover; background-image: url('<%= cloudinary_url(@match.user_one.photo, crop: :fill, :transformation => {:effect => "blur:800", gravity: :face}) %>')"></div>
