--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -8,7 +8,7 @@
 // Primary Button
 .btn-pink {
   background-color: $hivie-purple;
-  color: white;
+  color: white !important;
   height: 50px !important;
   border-radius: 8px !important;
 }
@@ -24,7 +24,8 @@
   height: 45px;
   width: 45px;
   border-radius: 50%;
-  color: $hivie-purple;
+  color: $hivie-purple !important;
+  border-color: $hivie-purple;
 }
 
 .btn {
@@ -34,4 +35,15 @@
 
 #btn-home {
   width: 80% !important;
+}
+
+.swipe-button {
+  background-color: $hivie-purple;
+  justify-content: center;
+  color: white !important;
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  font-size: 20px;
+  font-weight: 500;
 }
