--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -119,3 +119,11 @@ h3.black-profile-header {
 }
 
 
+.match-show-header {
+  font-size: 36px !important;
+  font-weight: bold !important;
+  font-family: Montserrat;
+  color: $hivie-logo;
+}
+
+
