--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -37,13 +37,13 @@
   width: 80% !important;
 }
 
-.swipe-button {
-  background-color: $hivie-purple;
-  justify-content: center;
-  color: white !important;
-  height: 45px;
-  width: 45px;
-  border-radius: 50%;
-  font-size: 20px;
-  font-weight: 500;
-}
+// .swipe-button {
+//   background-color: $hivie-purple;
+//   justify-content: center;
+//   color: white !important;
+//   height: 45px;
+//   width: 45px;
+//   border-radius: 50%;
+//   font-size: 20px;
+//   font-weight: 500;
+// }
