--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -120,7 +120,8 @@ h3.black-profile-header {
 
 
 .match-show-header {
-  font-size: 36px !important;
+  font-size: 45px !important;
+  font-style: italic;
   font-weight: bold !important;
   font-family: Montserrat;
   color: $hivie-logo;
