the blur is working everywhere, conversaiton, navbar...

--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -47,3 +47,9 @@ textarea#message_content {
   justify-content: center;
 }
 
+.preview-message-card {
+  a {
+    text-decoration: none !important;
+  }
+}
+
