--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -49,7 +49,10 @@ textarea#message_content {
 
 .preview-message-card {
   a {
+    color: $hivie-purple;
     text-decoration: none !important;
   }
 }
+
+
 
