--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,13 @@
  <div class="card-matching">
   <div class="bg-img" style="background-image: url(<%= cloudinary_url(@user.photo, :transformation => {:effect => "blur:800"}) %>)">
+    <!-- https://res.cloudinary.com/demo/image/upload/w_200/e_gradient_fade,y_-0.5,b_black/sample.jpg -->
   </div>
   <div class="card-infos-users ml-2">
     <div>
-      <div class="alias-font">
+      <div class="alias-font ml-3 mt-1">
         <%= @user.username %>, <%= @user.age %>
       </div>
-      <div class="geo-location-font">
+      <div class="geo-location-font ml-3 mb-1">
         <%= @user.city %>
       </div>
     </div>
