FIX: Updated view for Match Show

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -27,6 +27,10 @@
   border-radius: 50%;
   color: $hivie-purple !important;
   border-color: $hivie-purple;
+  &.btn-x {
+    color: white !important;
+    background: $hivie-purple;
+  }
 }
 
 .btn {
