front end conversation page. style is good

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -95,6 +95,14 @@ h5 {
   font-size: 18px;
   font-weight: bold;
   font-family: Montserrat;
+  color: $hivie-purple;
+}
+
+.match-alias {
+  font-size: 14px;
+  margin-top: 8px;
+  font-family: Montserrat;
+  color: $hivie-purple;
 }
 
 // Smallest Text, Message Navbar Alias Name, Message Date, *Astricts
