fixed linear gradient

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -8,7 +8,9 @@
   color: white;
   align-items: center;
   background-image: linear-gradient(rgba(0,0,0,-0.8),rgba(0,0,0,0.75));
+  padding-top: 30%;
 }
+
 .ml-2, .mx-2 {
   margin-left: 0rem !important;
 }
