FEAUTER: Added Return to all matches button on Match reveal page

--- a/app/views/users/reveal.html.erb
+++ b/app/views/users/reveal.html.erb
@@ -37,3 +37,7 @@
       <% end %>
     <% end %>
   </div>
+
+  <div>
+    <h3 class="text-center mb-5 mt-5"><%= link_to 'All Matches', matches_path, class: "btn button btn-pink" %></h3>
+  </div>
