--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -49,9 +49,8 @@
     </div>
     <% end %>
 
-    <h5>Unhappy? <%= link_to "Cancel My Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></h5>
-
-    <h5><%= link_to "Back", :back %><h5>
+    <p><%= link_to "Cancel My Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+    <p><%= link_to "Back", :back %><p>
 
     </div>
   </div>
