Adding marging to reveal users card

--- a/app/views/users/reveal.html.erb
+++ b/app/views/users/reveal.html.erb
@@ -7,10 +7,10 @@
 
   <div class="card-infos-users ml-2">
     <div>
-      <div class="alias-font">
+      <div class="alias-font ml-3 mt-1">
         <%= @user.username %>, <%= @user.age %>
       </div>
-      <div class="geo-location-font">
+      <div class="geo-location-font ml-3 mb-1">
         <%= @user.city %>
       </div>
     </div>
