--- a/app/views/shared/_chat_navbar.html.erb
+++ b/app/views/shared/_chat_navbar.html.erb
@@ -28,7 +28,7 @@
           <li> <%= link_to "Block & report", user_characteristic_path(current_user), class: "nav-link" %> </li>
           <li> <%= link_to "Unmatch", match_path(@match), method: :delete, class: "nav-link" %> </li>
           <li> <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %> </li>
-          <li> <button type="button", data-toggle="modal" data-target="#ModalRequest">Launch</button> </li>
+          <li> <button type="button" id="modal-link", data-toggle="modal" data-target="#ModalRequest">Reveal request</button> </li>
       <% else %>
         <li class="nav-item">
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
@@ -39,3 +39,6 @@
     </ul>
   </div>
 </div>
+
+
+
