--- a/app/views/users/reveal.html.erb
+++ b/app/views/users/reveal.html.erb
@@ -1,8 +1,8 @@
 <div class="card-matching">
-  <!-- add the lack gradient at the bottom, look what claire sent. And add the blure -->
-<!-- ("sample.jpg", blur: 600) -->
-  <div class="bgimg" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4))">
-    <%= cl_image_tag @user.photo, height: 400, width: 344, crop: :fill, class: "card-img-top"%>
+  <div>
+      <div class="bgimg" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4))">
+        <%= cl_image_tag @user.photo, height: 400, width: 344, crop: :fill, class: "card-img-top"%>
+      </div>
   </div>
 
   <div class="card-infos-users ml-2">
