--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -49,7 +49,7 @@
 .avatar-form {
   width: 110px;
   height: 110px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);git
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border-radius: 50%;
   background-size: cover;
 }
