FIX: Adding left margin to message-input

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -10,7 +10,7 @@
   <% end %>
 </div>
 
-<div class="input_msg text-center fixed-bottom" style="padding-top: 16px;">
+<div class="input_msg text-center fixed-bottom">
   <%= render 'form', message: @message, match: @match %>
 </div>
 <% content_for :after_js do %>
