--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -33,6 +33,8 @@ textarea#message_content {
 
 .input_msg {
   background-color: white;
+  padding-top: 16px;
+  margin-left: 8px;
 }
 
 .btn-send-message {
