last front fixes

--- a/app/assets/stylesheets/components/_pill.scss
+++ b/app/assets/stylesheets/components/_pill.scss
@@ -73,3 +73,8 @@ a:-webkit-any-link {
   color: $hivie-pink;
   text-decoration: none;
 }
+
+#pills-profiles{
+  margin-right: 10px;
+  padding: 6px 18px;
+}
