--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -41,24 +41,19 @@
 
 
 
-
-
-
-
-
 <!-- REMONTER LE CODE -->
 
 <!-- MODAL POP-UP -->
 <div class="modal fade" id="ModalRequest" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+  <div class="modal-dialog modal-dialog-centered class="rounded mb-0" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Send Reveal Request </h5>
+        <h5 class="modal-title" id="exampleModalLongTitle">Reveal Request </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body" style="color: #462B71;">
         <p>Your match has requested to share their identity. Would you like to share yours?</p>
       </div>
       <div class="modal-footer">
@@ -77,6 +72,6 @@
 </div>
   <!-- MODAL POP-UP END -->
 
-
+<!-- style:'background-color: #462B71;' -->
 
 
