--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,7 @@
 <div class="card-matching">
   <h3 class="profile-header">Your Profile</h3>
   <div>
-      <div class="bg-img" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4))">
-        <%= cl_image_tag @current_user.photo, height: 400, width: 344, crop: :fill, class: "card-img-top"%>
+  <div class="bg-img" style="background-image: url(<%= cloudinary_url(@current_user.photo) %>)">
       </div>
   </div>
 
@@ -15,7 +14,7 @@
         <%= @current_user.city %>
       </div>
       <div class="geo-location-font ml-3 mb-1">
-        <h4>Living HIV+ Since: <%= @user.diagnosis_year %></h4>
+        <h4>Living HIV+ Since: <%= @current_user.diagnosis_year %></h4>
       </div>
     </div>
   </div>
