--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -40,13 +40,14 @@
 
 #btn-home {
   width: 100% !important;
-  color: $hivie-logo !important;
+  color: white !important;
 }
 
 .log-in {
   color: $hivie-purple;
   font-size: 20px;
   font-weight: 600;
+
 }
 
 #modal-link {
