--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -47,6 +47,8 @@
   color: $hivie-purple;
   font-size: 20px;
   font-weight: 600;
+  background-color: transparent;
+  border-color: transparent;
 }
 
 #modal-link {
